modified:   .gitignore 	modified:   GeminiImageGenerator.java 	modified:   server.py